added CheckMateEvent.winner and made the game end when a king is captured